fix(Icon): use image URL as name prop, remove white space under image

--- a/packages/vant/src/icon/index.less
+++ b/packages/vant/src/icon/index.less
@@ -5,5 +5,6 @@
     width: 1em;
     height: 1em;
     object-fit: contain;
+    vertical-align: bottom;
   }
 }
